--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONNECTION_STRING='argennazaraliev4:argen123@cluster0.f7yxxd6.mongodb.net/'
-DB_NAME='Nomad'
+CONNECTION_STRING='Eldar:bmwm5f10e60@nomadjs.ploijhc.mongodb.net'
+DB_NAME='nomad'
